# management_arsip

./: README.md  main.py  manage.py  pyproject.toml
accounts/: models.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/url/: auth_urls.py
accounts/views/: auth_views.py
management_arsip/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: tailwindcss.css
templates/: base.html  copyright.html
templates/accounts/auth/: login.html
