[project]
name = "management-arsip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-axes>=8.0.0",
    "django-bleach>=3.1.0",
    "django-compressor>=4.5.1",
    "django-htmx>=1.23.2",
    "django-minify-html>=1.12.0",
    "djhtml>=3.0.9",
    "pytz>=2025.2",
    "ruff>=0.12.9",
]
